--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-  "name": "pro-mern-stack-exercise",
+  "name": "pro-mern-stack",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "nodemon": "^1.18.9"
-  },
+  "description": "Pro MERN Stack",
+  "main": "index.js",
   "scripts": {
-    "watch": "babel src --presets react,es2015 --out-dir static --watch",
     "start": "nodemon -w server.js server.js",
+    "compile": "babel src --presets react,es2015 --out-dir static",
+    "watch": "babel src --presets react,es2015 --out-dir static --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/myzero1/pro-mern-stack-exercise.git"
+    "url": "git+https://github.com/vasansr/pro-mern-stack.git"
   },
-  "author": "",
+  "keywords": [
+    "mern",
+    "react",
+    "mongodb",
+    "express",
+    "node"
+  ],
+  "author": "Vasan Subramanian",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/myzero1/pro-mern-stack-exercise/issues"
+    "url": "https://github.com/vasansr/pro-mern-stack/issues"
   },
-  "homepage": "https://github.com/myzero1/pro-mern-stack-exercise#readme"
+  "homepage": "https://github.com/vasansr/pro-mern-stack#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongodb": "^2.2.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "nodemon": "^1.10.0"
+  }
 }
