--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Pro MERN Stack",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -w server.js server.js",
+    "start": "nodemon -w server server/server.js",
     "compile": "babel src --presets react,es2015 --out-dir static",
-    "watch": "babel src --presets react,es2015 --out-dir static --watch",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,6 +35,8 @@
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "nodemon": "^1.10.0"
+    "nodemon": "^1.10.0",
+    "babel-loader": "^6.2.5",
+    "webpack": "^1.13.2"
   }
 }
